--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -35,6 +35,7 @@
 \usepackage[sort]{natbib} %uncomment for a harvard-style
 %\usepackage[square,sort,comma,numbers]{natbib}
 
+\usepackage{array}
 
 % Automatically set the PDF metadata fields
 \makeatletter
@@ -77,7 +78,7 @@
 
 
 % testattavuus & arkkitehtuuri
-\title{Testattavuuden ilmeneminen ohjelmistoarkkitehtuurissa}
+\title{Testattavuus ja ohjelmistoarkkitehtuuri}
 \author{Kristian Wahlroos}
 \date{\today}
 \level{Kandidaatintutkielma}
@@ -485,26 +486,24 @@ Yleisesti arkkitehtuuriin vaikuttavia hajuja voidaan löytää arkkitehtuurisell
 %\citep{HotSpot} arkkitehtuuriset hajut "hotspotit"\ 5kpl + kaikista altin virheille oli \citep[s. 57]{HotSpot} Unstable Interface \& Cross-Module Cycle.
 
 \noindent
-Näiden metriikoiden avulla sekä näkymällä moduulitasoon, olisi esimerkiksi hyvin mahdollistaa löytää yksi virhealttiillisin arkkitehtuurista löytyvä ongelmakohta \citep[s. 57]{HotSpot} \textit{Cross-Module Cycle}. \textit{Cross-Module Cycle} tilanne on arkkitehtuurissa, jos on olemassa syklinen riippuvuussuhde moduulitasolla. Se vaikeuttaa testattavuutta, siten, että testauksen aikana yhden moduulin testaaminen vaatii käytännössä myös kaikkien muiden moduulien testauksen, jolloin testitapausten isolointi vaikeutuu huomattavasti. Sen todettiin olevan myös kappaleessa \ref{good_testability} yksi testattavuuteen vaikuttava tekijä.
+Näiden metriikoiden avulla sekä näkymällä moduulitasoon, olisi esimerkiksi hyvin mahdollistaa löytää yksi virhealttiillisin arkkitehtuurista löytyvä ongelmakohta \citep[s. 57]{HotSpot} \textit{Cross-Module Cycle}. \textit{Cross-Module Cycle} tilanne on arkkitehtuurissa, jos on olemassa syklinen riippuvuussuhde moduulitasolla. Se vaikeuttaa testattavuutta, siten, että testauksen aikana yhden moduulin testaaminen vaatii käytännössä myös kaikkien muiden moduulien testauksen, jolloin testitapausten eriyttäminen vaikeutuu huomattavasti. Sykliset riippuvuudet todettiin olevan myös kappaleessa \ref{good_testability} yksi testattavuuteen vaikuttava tekijä.
 
 
-Arkkitehtuurisia hajuja, jotka vaikuttavat suoraan testattavuuteen voidaan tunnistaa olevan ainakin \citep{garcia_identifying_2009}
-
-\begin{itemize}
-	\item \textit{Connector Envy}
-	\item \textit{Scattered Parasitic Functionality}.
-\end{itemize}
+Arkkitehtuurisia hajuja, jotka vaikuttavat suoraan testattavuuteen voidaan tunnistaa olevan ainakin kaksi \citep{garcia_identifying_2009}
 
 \noindent
-\textit{Connector Envy} on tilanne, jossa komponentti toteuttaa konnektorille kuuluvaa toiminnallisuutta eli toteuttaa esimerkiksi joko kommunikointia, koordinointia tai tiedon konversiota. Nämä tulisi jättää konnektorin toteutettavaksi, koska komponentin toiminnallisuus ja interaktiot eivät ole enää erillään testattavia ominaisuuksia ja tilanteena johtaa siihen, että ei pystytä enää varmasti sanomaan, että mikä kohta komponentissa oli virheellinen, jos se testauksen aikana tuli esille. \textit{Scattered Parasitic Functionality} taas johtuu, jos useammalla komponentilla on sama vastuu ja ne ovat vastuussa myös jostain muusta vastuusta. Testattavuus kärsii tästä, koska esimerkiksi integraatiotestauksen aikana tapahtunut virhe vaikuttaa laajalla alueella ja vaikeuttaa vian alkuperän määrittämistä. 
+\paragraph{\textit{Connector Envy}} tilanne, jossa komponentti toteuttaa konnektorille kuuluvaa toiminnallisuutta eli toteuttaa esimerkiksi joko kommunikointia, koordinointia tai tiedon konversiota. Nämä tulisi jättää konnektorin toteutettavaksi, koska komponentin toiminnallisuus ja interaktiot eivät ole enää erillään testattavia ominaisuuksia ja tilanteena johtaa siihen, että ei pystytä enää varmasti sanomaan, että mikä kohta komponentissa oli virheellinen, jos se testauksen aikana tuli esille.
 
-Näistä kahdesta arkkitehtuurisesta hajusta voidaan huomata, että ne pyrkivät löytämään sekä huonon koheesion että mahdollisen riippuvuuksien jakautumisen turhan laajalle. Garcian ym. tutkimuksessa ei kuitenkaan määritellä keinoja löytämään näitä arkkitehtuurisia hajuja  
+\paragraph{\textit{Scattered Parasitic Functionality}} tilanne, jossa useammalla komponentilla on sama vastuu ja ne ovat vastuussa myös jostain muusta vastuusta. Testattavuus kärsii tästä, koska esimerkiksi integraatiotestauksen aikana tapahtunut virhe vaikuttaa laajalla alueella ja vaikeuttaa vian alkuperän määrittämistä. 
+
+\noindent
+\\Näistä kahdesta arkkitehtuurisesta hajusta voidaan huomata, että ne pyrkivät löytämään sekä huonon koheesion että mahdollisen riippuvuuksien jakautumisen turhan laajalle.
 
 
 \subsubsection{Koodihajujen ja arkkitehtuuristen hajujen suhde}
 
 
-Vaikka arkkitehtuurisia hajuja on löydetty testattavuuden kannalta muutamia, niin niiden tunnistamiselle ei ole annettu yhtä oikeaa ratkaisua.  Vale ym. ovat myös tutkimuksessaan tuoneet esille muunmuassa hybridihajut, jotka ovat sekoitus koodihajuja ja arkkitehtuurisia hajuja \citep{vale_bad_2014}. Koodipoikkeama (code anomaly) luetaan hybridihajuksi, jos
+Vaikka arkkitehtuurisia hajuja on löydetty testattavuuden kannalta muutamia, niin niiden tunnistamiselle ei ole annettu yhtä oikeaa ratkaisua.  Vale ym. ovat myös tutkimuksessaan tuoneet esille muunmuassa hybridihajut, jotka ovat sekoitus koodihajuja ja arkkitehtuurisia hajuja tuoden uuden näkökulman arkkitehtuuristen hajujen löytämiseksi. Koodipoikkeama (code anomaly) luetaan hybridihajuksi, jos \citep{vale_bad_2014}
 
 \begin{itemize}
 	\item sen vaikuttamat luokat ovat vastuussa arkkitehtuurisista elementeistä
@@ -517,30 +516,50 @@ Hybridihajujen tunnistaminen saattaa helpottaa arkkitehtuuristen hajujen löytä
 Lisää arkkitehtuuristen sekä koodihajujen yhteyksistä on tutkinut Macia ym. \citep{macia_impact_2011}. He löysivät, että tietyt koodihajut ovat indikaattoreita arkkitehtuurisista hajuista. Kahteen aiemmin mainittuun testattavuutta huonontaviin hajuihin he lukivat seuraavat vastaavat koodihajut aspekti-orientoituneissa järjestelmissä
 
 \begin{center}
-	\begin{tabular}{| l | l | p{3cm} |}
-	\hline
-	Koodihaju & Indikoi arkkitehtuurisesta hajusta & Syy \\ \hline
+	\begin{tabular}{| l | l | m{3.2cm} |}
+	\hline 
+	\textbf{Koodihaju} & \textbf{Arkkitehtuurinen haju} & \textbf{Syy} \\ \hline
 	\textit{God Aspect} & \textit{SPF} & Liikaa vastuita \\ \hline
 	\textit{God Pointcut} & \textit{SPF, Connector Envy} & Liikaa suoria vastuita \\ \hline
 	\textit{Composition Bloat} & \textit{SPF} & Liikaa riippuvuuksia \\ \hline
-	\textit{Duplicate Pointcut} & \textit{SPF} & Samankaltaista toiminnallisuutta \\ \hline
+	\textit{Duplicate Pointcut} & \textit{SPF} & Samankaltaista toiminnallisuutta \\ 
+	\hline
 	\end{tabular}
 \end{center}
 
 %Koodi ja arkkitehtuuri-info. Detection strategies \citep[s. 179-182]{macia_enhancing_2013}
 
-%Architecture sensitive analysis (code metrics) \citep[s. 185]{macia_enhancing_2013} $\rightarrow$ God Classes were related to Connector Envy, Scattered Functionality. Misplaced Class were related to Cyclic Dependencies, Scattered Functionality.
+\noindent
+Kyseiset koodihajut eivät suoraan koske juuri olio-pohjaisia järjestelmiä, mutta niistä voidaan silti nähdä, että ongelmat tulevat liiallisista vastuista, liiallisista riippuvuuksista ja samankaltaisesta toiminnallisuudesta. Nämä ominaisuudet ovat nähtävissä hyvin tavallisissakin olio-pohjaisissa järjestelmissä ja tätä faktaa tukee Macia ym. jatkotutkimus hieman samasta aiheesta, jossa tutkittiin arkkitehtuuri-herkkiä koodipoikkeamia\citep{macia_enhancing_2013}. He tulivat testattavuuden kannalta seuraaviin päätelmiin
 
+\begin{center}
+	\begin{tabular}{| l | l | m{3.5cm} |}
+	\hline
+	\textbf{Koodihaju} & \textbf{Arkkitehtuurinen haju} & \textbf{Selitys}\\ \hline
+	\textit{God Class} & \textit{SPF, Connector Envy} &  Toiminnallisuus liian keskittynyttä, liialliset vastuut\\ \hline
+	\textit{Misplaced Class} & \textit{Cyclic Dependencies, SPF} & Riippuvuuksia enemmän komponentin ulkopuolelle kuin sisäpuolelle\\ \hline
+	\end{tabular}
+\end{center} 
 
 \noindent
-Vaikka koodihajut eivät suoraan koske juuri olio-pohjaisia järjestelmiä, niin voidaan niistä silti nähdä, että ongelmat tulevat liiallisista vastuista, liiallisista riippuvuuksista ja samankaltaisesta toiminnallisuudesta.
-
-
+Arkkitehtuuristen hajujen ja koodihajujen välillä on siis jokin suhde, mutta tarkempi koodihajujen analysointi arkkitehtuuristen ongelmien tunnistamiseksi on aiheena kuitenkin tämän tutkielman ulkopuolella. 
 
 
 %Koodihajujen tunnistaminen arkkitehtuurisen degraation tunnistamiseksi \citep{fontana_towards_2015}. Vaikuttavat ylläpidettävyyteen. God Class, Data Class, Brain Method, Shotgun Surgery, Dispersed Coupling, Message Chains. Metriikoina käytettiin muunmuassa: Tight Class Cohesion, Access to Foreign Data, Number of Public Attributes, Maximum Nesting Level, Coupling Intensity. Co-Occurence of smells. "Code Smells Relation View" diagrammi \citep[s. 5]{fontana_towards_2015}. Koodihajut vaikeuttavat Coupling on kaikki, koodihajut vaikeuttavat koheesiota on GC, BM, DC. 
 
-  
+Mielekkäämpi tarkastelu kohdistuukin enemmän aiheisiin kuten mistä koodihajut johtuvat tai mitkä tekijät koodihajuissa vaikuttavat arkkitehtuuristen hajujen esiintymiseen järjestelmissä. Tähän avuksi Fontana ym. loivat erityisen näkymän koodihajujen tunnistamiseksi ja tunnistivat kytkentään ja koheesioon vaikuttavia koodihajuja \citep{fontana_towards_2015}. Kytkentään vaikuttivat koodihajut, jotka olivat suoraan vastuussa muunmuassa
+
+\begin{itemize}
+	\item suurista luokista (\textit{God Class})
+	\item pitkistä metodeista (\textit{Long Method})
+	\item laajalle hajautuneesta kytkennästä (\textit{Dispersed Coupling})
+	\item replikoituvasta muutoksen vaatimasta kohdealueesta (\textit{Shotgun Surgery})
+\end{itemize}
+
+\noindent
+Koheesioon vaikuttivat kolme ensimmäistä samaa tekijää.
+
+On tutkimusten nojalla selvää, että hyvä kytkennän ja koheesion taso on tavoteltava ominaisuus sekä kooditasolla että arkkitehtuuri tasolla testattavuuden kannalta, mutta hyvän kytkennän ja koheesion määritteleminen on hankalaa.  
 
 %\subsection{Sunnittelumallien vaikutus testaukseen}
 
@@ -555,7 +574,7 @@ Vaikka koodihajut eivät suoraan koske juuri olio-pohjaisia järjestelmiä, niin
 
 %UML + graph model to compute all possible anti-patterns that affect testability \citep{baudry_testability_2002}.
 
-UML-kaavio ei itsessään riitä näyttämään kaikkia testattavuuden kannalta tärkeitä näkökulmia arkkitehtuurisella tasolla, mutta sen tueksi on luotu useita menetelmiä, jotka hyödyntävät esimerkiksi jo valmista UML-luokkakaaviota. Eräs näistä on \textit{class dependency graph model} \citep[s. 4]{baudry_testability_2002}. Sen avulla on mahdollista nähdä 
+UML-kaavio ei itsessään riitä näyttämään kaikkia testattavuuden kannalta tärkeitä näkökulmia arkkitehtuurisella tasolla, mutta sen tueksi on luotu useita menetelmiä, jotka hyödyntävät esimerkiksi jo valmista UML-luokkakaaviota. Eräs näistä on \textit{class dependency graph model} \citep{baudry_testability_2002}. Sen avulla on mahdollista nähdä 
 
 \begin{itemize}
 	\item luokkien välistä suurta interaktiota
