--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -366,6 +366,7 @@ month={Sept}
 	author = {Macia, I. and Garcia, A. and Chavez, C. and von Staa, A.},
 	urldate = {2016-03-15},
 	date = {2013-03},
+	year = {2013}
 }
 
 @INPROCEEDINGS{HotSpot, 
